Fix most of the CUSTOM_DATA usages